View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029055 | Open CASCADE | OCCT:Visualization | public | 2017-08-26 00:48 | 2020-05-22 22:48 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | feature | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2015 | ||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0029055: Visualization, Image_AlienPixMap - fallback using Wincodec | ||||
Description | It is desired to extend Image_AlienPixMap so that system image library can be used in case if HAVE_FREEIMAGE is undefined. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
parent of | 0029184 | closed | bugmaster | Visualization - DrawWindow::Save() fails when using WinCodec with PNG codec |
parent of | 0030764 | closed | bugmaster | Coding - warnings in Image_AlienPixMap.cxx when built with MSVC10 |
related to | 0030549 | resolved | abv | Coding - split Image_AlienPixMap into several classes |
related to | 0031478 | closed | bugmaster | Visualization, TKOpenGl - allow uploading Cubemap in compressed DDS format when supported by GPU |
|
Branch CR29055 has been created by kgv. SHA-1: b0f5847a8afb346e4df462eee8c1c4b486c97dc9 Detailed log of new commits: Author: kgv Date: Sat Aug 26 00:48:23 2017 +0300 0029055: Visualization, Image_AlienPixMap - fallback using system library |
|
Branch CR29055 has been updated forcibly by kgv. SHA-1: 7f9d0e99d6ec3de67fc4a7d26b8f40a8c8a0ee4b |
|
Branch CR29055 has been updated forcibly by kgv. SHA-1: bff46bff61d32407cbde8ddb12bc5d058634aeaf |
|
Branch CR29055 has been updated forcibly by kgv. SHA-1: b8a86ec2c4d84972e9eee8e433119e5387b0e130 |
|
Branch CR29055 has been updated forcibly by kgv. SHA-1: 2f86c0a0cf34edde1624629c69a76c4a5b7ff410 |
|
Patch is ready for review. http://jenkins-test-10.nnov.opencascade.com/view/CR29055-master-KGV/view/OCCT%20compile/ |
|
No remarks, please integrate (testing in standard environment is not needed because the change is specific to case when HAVE_FREEIMAGE is not set) |
|
Branch CR29055 has been updated by kgv. SHA-1: 289dc83edbbaaa0020a9b5707e83157626fedc6d Detailed log of new commits: Author: kgv Date: Tue Aug 29 10:58:10 2017 +0300 # fix misprint in Tcl syntax |
|
Branch CR29055 has been deleted by kgv. SHA-1: 289dc83edbbaaa0020a9b5707e83157626fedc6d |
occt: master a975e06e 2017-08-25 21:48:23 Committer: bugmaster Details Diff |
0029055: Visualization, Image_AlienPixMap - fallback using Wincodec Possibility to read and write images in BMP, PNG, JPEG formats without using FreeImage library is provided on Windows using system image library. |
Affected Issues 0029055 |
|
mod - adm/cmake/occt_csf.cmake | Diff File | ||
mod - adm/genproj.tcl | Diff File | ||
mod - src/Image/Image_AlienPixMap.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-08-26 00:48 | kgv | New Issue | |
2017-08-26 00:48 | kgv | Assigned To | => kgv |
2017-08-26 00:48 | git | Note Added: 0069941 | |
2017-08-27 15:06 | kgv | Summary | Visualization, Image_AlienPixMap - fallback using system library => Visualization, Image_AlienPixMap - fallback using Wincodec |
2017-08-27 15:06 | git | Note Added: 0069952 | |
2017-08-27 16:30 | git | Note Added: 0069953 | |
2017-08-27 17:01 | git | Note Added: 0069954 | |
2017-08-27 17:02 | git | Note Added: 0069955 | |
2017-08-27 18:00 | kgv | Note Added: 0069956 | |
2017-08-27 18:00 | kgv | Assigned To | kgv => abv |
2017-08-27 18:00 | kgv | Status | new => resolved |
2017-08-27 18:00 | kgv | Target Version | 7.4.0 => 7.2.0 |
2017-08-28 16:59 | abv | Note Added: 0069998 | |
2017-08-28 16:59 | abv | Assigned To | abv => bugmaster |
2017-08-28 16:59 | abv | Status | resolved => reviewed |
2017-08-28 18:27 | bugmaster | Status | reviewed => tested |
2017-08-29 10:58 | git | Note Added: 0070033 | |
2017-08-29 11:35 | bugmaster | Test case number | => Not required |
2017-08-31 18:37 | bugmaster | Changeset attached | => occt master a975e06e |
2017-08-31 18:37 | bugmaster | Status | tested => verified |
2017-08-31 18:37 | bugmaster | Resolution | open => fixed |
2017-09-04 18:20 | git | Note Added: 0070208 | |
2017-09-29 16:17 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:29 |
|
Status | verified => closed |
2017-10-04 22:18 | kgv | Relationship added | parent of 0029184 |
2019-03-09 05:53 | kgv | Relationship added | related to 0030549 |
2019-06-04 09:28 | kgv | Relationship added | parent of 0030764 |
2020-05-22 22:48 | kgv | Relationship added | related to 0031478 |