0029055: Visualization, Image_AlienPixMap - fallback using Wincodec

Possibility to read and write images in BMP, PNG, JPEG formats without using FreeImage library is provided on Windows using system image library.